<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:key="gamification"-->
        <!--android:summary="How much gamification to have"-->
        <!--android:title="Gamification" />-->

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="home_page"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/home_page" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="expand"
        android:summary="@string/expand_navigation_drawer_summary"
        android:title="@string/expand_navigation_drawer" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference-->
        <!--android:capitalize="words"-->
        <!--android:defaultValue="@string/pref_default_display_name"-->
        <!--android:inputType="textCapWords"-->
        <!--android:key="example_text"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_title_display_name" />-->

</PreferenceScreen>
